--- a/html/header.html
+++ b/html/header.html
@@ -1,14 +1,17 @@
 
-<header>
+<header class="sticky-top">
     <nav id="nav" class="rowLayout lf-card"  style="justify-content: space-between">
-        <div><span class="text-xxxlarge lf-button">LF</span></div>
-        <div>
-            <a href="/index.html" class="lf-button header-link wide lf-margin-top-xl">LOCALE FINDER</a>
+        <div class="rowLayout">
+            <div><span class="text-xxxlarge lf-button">LF</span></div>
+            <div>
+                <a href="/index.html" class="lf-button header-link wide lf-margin-top">LOCALE FINDER</a>
+            </div>
         </div>
+
 
         <div id="down">
             <div >
-                <a href="javascript:void(0)" class="lf-button text-large lf-margin-top-large" onclick="lfOpen()">
+                <a href="javascript:void(0)" class="lf-button text-large lf-margin-top" onclick="lfOpen()">
                     <i class="fa fa-bars"></i>
                 </a>
             </div>
@@ -21,18 +24,18 @@
             </div>
         </div>
 
-        <div id="down-content-desktop" class="rowLayout">
+        <div id="down-content-desktop" class="rowLayout ">
 
-            <a href="/html/CompareNeighborhoods.html" class="lf-button header-link position-right lf-margin-top-xl">
-                <i class="fa fa-balance-scale lf-hover-opacity "></i>COMPARE
-            </a>
-            <a href="/html/map.html" class="lf-button header-link position-right lf-margin-top-xl">
-                <i class="fa fa-search lf-hover-opacity "></i>FIND
-            </a>
-            <a href="/html/slider.html" class="lf-button header-link position-right lf-margin-top-xl" >
+            <a href="/html/slider.html" class="lf-button header-link  lf-margin-top-xl" >
                 <i class="fa fa-lightbulb-o lf-hover-opacity "></i>SUGGEST
             </a>
-            <a href="/html/team.html" class="lf-button header-link position-right lf-margin-top-xl" >
+            <a href="/html/map.html" class="lf-button header-link  lf-margin-top-xl">
+                <i class="fa fa-search lf-hover-opacity "></i>FIND
+            </a>
+            <a href="/html/CompareNeighborhoods.html" class="lf-button header-link  lf-margin-top-xl">
+                <i class="fa fa-balance-scale lf-hover-opacity "></i>COMPARE
+            </a>
+            <a href="/html/team.html" class="lf-button header-link  lf-margin-top-xl" >
                 <i class="fa fa-handshake-o lf-hover-opacity "></i>TEAM
             </a>
 
