--- a/index.html
+++ b/index.html
@@ -32,17 +32,20 @@
     <div id='header'></div>
 
     <div id="indexMain" class='bg-main grayscale-min display-main'>
-        <div class="position-left lf-text-white text-lighter" style="padding: 38px">
+        <div class="position-left lf-text-white text-lighter lf-transform" style="padding: 38px">
             <span class="text-xxxlarge">Find Your Dream Neighborhood</span>
             <br/>
             <span class="text-large">We care what matters to you</span>
-            <p><a href="/html/slider.html" class="lf-button lf-red lf-opacity lf-padding-large lf-margin-top lf-large">GET STARTED</a></p>
+            <p><a href="#indexSub" class="lf-button lf-red lf-opacity lf-padding-large lf-margin-top lf-large">GET STARTED</a></p>
         </div>
     </div>
 
-   <div class="card-container desktopLayout">
+   <div id="indexSub" class="text-large text-center lf-margin-top-large" style="font-size:28px"> <h1> OUR OPTIONS  </h1>
+   </div>
+   <div  class="card-container desktopLayout">
+
         <div class="lf-card-2">
-            <img src="./image/seattle.jpg" alt="Card image cap"/>
+            <img src="./image/seattle.jpg" alt="Get Suggestion for a neighborhood"/>
             <div class="lf-card-block">
                 <h4 class="lf-card-title">New to Seattle!</h4><br/>
                 <p class="lf-card-text">Welcome to Evergreen State. We would love to suggest top 3 areas which is best fit for you. </p><br/>
@@ -51,16 +54,16 @@
         </div>
 
         <div class="lf-card-2">
-            <img src="./image/downtown.jpg" alt="Card image cap"/>
+            <img src="./image/downtown.jpg" alt="Find more about a neighborhood"/>
             <div class="lf-card-block">
                 <h4 class="lf-card-title">Already know the neighborhood you like?</h4><br/>
-                <p class="lf-card-text">That's awesome! Let us help you explore more on your choice of neighborhood.</p><br/>
+                <p class="lf-card-text">That's awesome! Let us help you explore more on your choice of the neighborhood and provide you more information.</p><br/>
                 <div><a href="/html/map.html" class="lf-button lf-red lf-opacity">START</a></div>
             </div>
         </div>
 
         <div class="lf-card-2">
-            <img src="./image/southLake.jpg" alt="Card image cap"/>
+            <img src="./image/southLake.jpg" alt="Compare two neighborhoods"/>
             <div class="lf-card-block">
                 <h4 class="lf-card-title">Would like to compare neighborhoods?</h4><br/>
                 <p class="lf-card-text">Confused which one to choose. Compare with respect to each criteria and make the right choice.</p><br/>
@@ -68,6 +71,7 @@
             </div>
         </div>
     </div>
+
 
     <div id='search'></div>
 
