--- a/html/header.html
+++ b/html/header.html
@@ -1,44 +1,87 @@
+<!DOCTYPE HTML>
+<html lang="en">
 
-<header class="sticky-top">
-    <nav id="nav" class="rowLayout lf-card"  style="justify-content: space-between">
-        <div class="rowLayout">
-            <div><span class="text-xxxlarge lf-button">LF</span></div>
-            <div>
-                <a href="/index.html" class="lf-button header-link wide lf-margin-top">LOCALE FINDER</a>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <title>Locale Finder</title>
+
+    <link rel="stylesheet" type="text/css" href="./css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="./css/html-semantics.css" />
+    <link rel="stylesheet" type="text/css" href="./css/layout.css" />
+    <link rel="stylesheet" type="text/css" href="./css/brand.css" />
+
+    <link rel="stylesheet" type="text/css" href="./css/index.css" />
+    <link rel="shortcut icon" href="favicon.ico">
+	<link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./css/findNeighbor.css" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" />
+    
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Muli&effect=shadow-multiple|3d-float" />
+    <!-- <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" /> -->
+    <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script type="text/javascript" src="./js/loadHeaderFooter.js"></script>
+    <script>document.documentElement.className = 'js';</script>
+</head>
+
+<body>
+
+    <div id='header'></div>
+
+
+    <div id="indexMain" class='bg-main  display-main'>
+        <div class="position-left lf-text-color text-lighter lf-transform" style="padding: 38px ;padding-top:0px">
+            <span class="text-xxxlarge">Find Your Dream Neighborhood</span>
+            <br/>
+            <span class="text-large">We care what matters to you</span>
+            <p><a href="#indexSub" class="lf-button lf-button-brand  lf-padding-large lf-margin-top lf-large">GET STARTED</a></p>
+        </div>
+    </div>
+
+    <div class="lf-bg">
+       <!-- <div id="indexSub" class="text-large text-center" style="font-size:28px"> <h1 class="lf-padding-large"> OUR OPTIONS  </h1>
+        </div> -->
+        <div  class="card-container desktopLayout">
+
+            <div class="lf-card-2">
+                <img src="./image/seattle.jpg" alt="Get Suggestion for a neighborhood"/>
+                <div class="lf-card-block">
+                    <h4 class="lf-card-title">New to Seattle!</h4><br/>
+                    <p class="lf-card-text">Welcome to the Evergreen State. We would love to suggest top 3 areas which are best fit for you and help you find your dream neighborhood. </p><br/>
+                    <div><a href="/html/slider.html" class="lf-button lf-button-brand ">START</a></div>
+                </div>
+            </div>
+
+            <div class="lf-card-2">
+                <img src="./image/downtown.jpg" alt="Find more about a neighborhood"/>
+                <div class="lf-card-block">
+                    <h4 class="lf-card-title">Already know the neighborhood you like?</h4><br/>
+                    <p class="lf-card-text">That's awesome! Let us help you explore more on your choice of the neighborhood and provide you more information.</p><br/>
+                    <div><a href="/html/map.html" class="lf-button lf-button-brand ">START</a></div>
+                </div>
+            </div>
+
+            <div class="lf-card-2">
+                <img src="./image/southLake.jpg" alt="Compare two neighborhoods"/>
+                <div class="lf-card-block">
+                    <h4 class="lf-card-title">Would like to compare neighborhoods?</h4><br/>
+                    <p class="lf-card-text">Confused which one to choose. Compare with respect to each criteria and make the right choice.</p><br/>
+                    <div><a href="/html/CompareNeighborhoods.html" class="lf-button lf-button-brand ">START</a></div>
+                </div>
             </div>
         </div>
 
 
-        <div id="down">
-            <div >
-                <a href="javascript:void(0)" class="lf-button text-large lf-margin-top" onclick="lfOpen()">
-                    <i class="fa fa-bars"></i>
-                </a>
-            </div>
-            <div id="down-content" class="lf-sidebar lf-animate-right lf-black position-topright text-left">
-                <a href="javascript:void(0)" onclick="lfClose()" class="lf-button text-large lf-large lf-margin-top-large">Close &times;</a>
-                <a href="/html/slider.html" class="text-left">SUGGEST</a>
-                <a href="/html/map.html" class="text-left">FIND</a>
-                <a href="/html/CompareNeighborhoods.html" class="text-left">COMPARE</a>
-                <a href="/html/team.html" class="text-left"> TEAM </a>
-            </div>
-        </div>
 
-        <div id="down-content-desktop" class="rowLayout ">
 
-            <a href="/html/slider.html" class="lf-button header-link  lf-margin-top-xl" >
-                <i class="fa fa-lightbulb-o lf-hover-opacity "></i>SUGGEST
-            </a>
-            <a href="/html/map.html" class="lf-button header-link  lf-margin-top-xl">
-                <i class="fa fa-search lf-hover-opacity "></i>FIND
-            </a>
-            <a href="/html/CompareNeighborhoods.html" class="lf-button header-link  lf-margin-top-xl">
-                <i class="fa fa-balance-scale lf-hover-opacity "></i>COMPARE
-            </a>
-            <a href="/html/team.html" class="lf-button header-link  lf-margin-top-xl" >
-                <i class="fa fa-handshake-o lf-hover-opacity "></i>TEAM
-            </a>
+    <div id='search'></div>
+    </div>
+    <div id='footer'></div>
+  
+   <script type="text/javascript" src="./js/findNeighbor.js"></script>
+</body>
 
-        </div>
-    </nav>
-</header>
+</html>
