--- a/html/SuggestionsPage.html
+++ b/html/SuggestionsPage.html
@@ -38,7 +38,7 @@
 
             <div id="suggestionNames" class="lf-margin-top-xxl lf-bg text-center">
                 <div class="lf-padding-large"><h2 class="lf-xlarge">BEST NEIGHBORHOODS FOR YOU</h2></div>
-                <div style="padding:0 35% ">
+                <div style="vertical-align: middle;display: inline-block">
                     <ul class="text-center desktopLayout" style="list-style-type: none">
                         <!--  <li><a class="lf-button" href="neighborDetail.html?name=Queen Anne">Queen Anne</a></li>
                           <li><a class="lf-button" href="neighborDetail.html?name=Capitol Hill">Capitol Hill</a></li>
