--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </div>
 
-    <div class="lf-bg">
+    <div id="indexSub" class="lf-bg">
        <!-- <div id="indexSub" class="text-large text-center" style="font-size:28px"> <h1 class="lf-padding-large"> OUR OPTIONS  </h1>
         </div> -->
         <div  class="card-container desktopLayout">
