Slider Question page changes

--- a/html/header.html
+++ b/html/header.html
@@ -17,7 +17,7 @@
             </div>
             <div id="down-content" class="lf-sidebar lf-animate-right lf-black position-topright text-left">
                 <a href="javascript:void(0)" onclick="lfClose()" class="lf-button text-large lf-large lf-margin-top-large">Close &times;</a>
-                <a href="/html/slider.html" class="text-left">SUGGEST</a>
+                <a href="/html/sliderQuestions.html" class="text-left">SUGGEST</a>
                 <a href="/html/map.html" class="text-left">FIND</a>
                 <a href="/html/CompareNeighborhoods.html" class="text-left">COMPARE</a>
                 <a href="/html/team.html" class="text-left"> TEAM </a>
@@ -26,7 +26,7 @@
 
         <div id="down-content-desktop" class="rowLayout ">
 
-            <a href="/html/slider.html" class="lf-button header-link  lf-margin-top-xl" >
+            <a href="/html/sliderQuestions.html" class="lf-button header-link  lf-margin-top-xl" >
                 <i class="fa fa-lightbulb-o lf-hover-opacity "></i>SUGGEST
             </a>
             <a href="/html/map.html" class="lf-button header-link  lf-margin-top-xl">
