--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/findNeighbor.css" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" />
-    
+
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Muli&effect=shadow-multiple|3d-float" />
     <!-- <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" /> -->
     <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
@@ -51,7 +51,7 @@
                 <div class="lf-card-block">
                     <h4 class="lf-card-title">New to Seattle!</h4><br/>
                     <p class="lf-card-text">Welcome to the Evergreen State. We would love to suggest top 3 areas which are best fit for you and help you find your dream neighborhood. </p><br/>
-                    <div><a href="/html/slider.html" class="lf-button lf-button-brand ">START</a></div>
+                    <div><a href="/html/sliderQuestions.html" class="lf-button lf-button-brand ">START</a></div>
                 </div>
             </div>
 
@@ -80,7 +80,7 @@
     <div id='search'></div>
     </div>
     <div id='footer'></div>
-  
+
    <script type="text/javascript" src="./js/findNeighbor.js"></script>
 </body>
 
