--- a/html/map.html
+++ b/html/map.html
@@ -57,7 +57,7 @@
   
     <section class="mapPage">
 	<div class="mapDiv">
-	<img src="../image/map.jpg" alt="SeattleMap" usemap="#imagemap1" height="600" width="500">
+	<img src="../image/map1.jpg" alt="SeattleMap" usemap="#imagemap1" height="600" width="500">
     <map id="imagemap1" name="imagemap1">
     <area class="heart" shape="rect" alt="Northgate" coords="360,100,520,190" class="neighborDetail" href="neighborDetail.html?name=Northgate" />
     <area class="heart" shape="rect" alt="U-District" coords="370,230,470,280" class="neighborDetail" href="neighborDetail.html?name=University District" />
@@ -75,42 +75,33 @@
    
 
     <div class="mapTextDivRight1">
-    <h1 class="mapTextTitle"> CHOOSE AN AREA</h1>
-    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=Northgate">Northgate</a></h3>
-    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=Ballard">Ballard</a></h3>
-    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=Fremont">Fremont</a></h3>
-    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=University District">U-District</a></h3>
-    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=Queen Anne">Queen Anne</a></h3>
-    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=Capitol Hill">Capitol Hill</a></h3>
-    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=Downtown">Downtown</a></h3>
-    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=Alki">Alki</a></h3>
-    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=Green Lake">Green Lake</a></h3>
-    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=South Lake Union">South Lake Union</a></h3>
+    <h1 class="mapTextTitle">Choose Neighborhood</h1>
+    <h3 class="mapText"><a class="mapLink" href="neighborDetail.html?name=Northgate">Northgate</a></h3>
+    <h3 class="mapText"><a class="mapLink" href="neighborDetail.html?name=Ballard">Ballard</a></h3>
+    <h3 class="mapText"><a class="mapLink" href="neighborDetail.html?name=Fremont">Fremont</a></h3>
+    <h3 class="mapText"><a class="mapLink" href="neighborDetail.html?name=University District">U-District</a></h3>
+    <h3 class="mapText"><a class="mapLink" href="neighborDetail.html?name=Queen Anne">Queen Anne</a></h3>
+    <h3 class="mapText"><a class="mapLink" href="neighborDetail.html?name=Capitol Hill">Capitol Hill</a></h3>
+    <h3 class="mapText"><a class="mapLink" href="neighborDetail.html?name=Downtown">Downtown</a></h3>
+    <h3 class="mapText"><a class="mapLink" href="neighborDetail.html?name=Alki">Alki</a></h3>
+    <h3 class="mapText"><a class="mapLink" href="neighborDetail.html?name=Green Lake">Green Lake</a></h3>
+    <h3 class="mapText"><a class="mapLink" href="neighborDetail.html?name=South Lake Union">South Lake Union</a></h3>
     </div>
 
     <div class="mapTextDivRight2">
-    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=Downtown">North Beach</a></h3>
-    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=Downtown">Olympic Hills</a></h3>
-    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=Downtown">Central Seattle</a></h3>
-    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=Downtown">Magnolia</a></h3>
-    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=Downtown">Beacon Hill</a></h3>
-    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=Downtown">Georgetown</a></h3>
-    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=Downtown">Rainier Valley</a></h3>
+    <h3 class="mapText"><a class="mapLink" href="neighborDetail.html?name=Downtown">North Beach</a></h3>
+    <h3 class="mapText"><a class="mapLink" href="neighborDetail.html?name=Downtown">Olympic Hills</a></h3>
+    <h3 class="mapText"><a class="mapLink" href="neighborDetail.html?name=Downtown">Central Seattle</a></h3>
+    <h3 class="mapText"><a class="mapLink" href="neighborDetail.html?name=Downtown">Magnolia</a></h3>
+    <h3 class="mapText"><a class="mapLink" href="neighborDetail.html?name=Downtown">Beacon Hill</a></h3>
+    <h3 class="mapText"><a class="mapLink" href="neighborDetail.html?name=Downtown">Georgetown</a></h3>
+    <h3 class="mapText"><a class="mapLink" href="neighborDetail.html?name=Downtown">Rainier Valley</a></h3>
     </div>
     </section>
 <!-- map section ended by Amanda -->
 
 <!--<div id='footer'><div>-->
 <footer class="lf-card">
-    <div class="rowLayout" style="justify-content: space-between">
-        <div>&copy; Copyright 2017</div>
-        <div class="lf-text-grey" style="padding:0px 0px;">
-            <i class="fa fa-facebook-official lf-hover-opacity "></i>
-            <i class="fa fa-instagram lf-hover-opacity "></i>
-            <i class="fa fa-twitter lf-hover-opacity "></i>
-            <i class="fa fa-linkedin lf-hover-opacity "></i>
-        </div>
-    </div>
 </footer>
 </body>
 </html>
