Get started button animation added

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
             <span class="text-xxxlarge">Find Your Dream Neighborhood</span>
             <br/>
             <span class="text-large">We care what matters to you</span>
-            <p><a href="#indexSub" class="lf-button lf-button-brand  lf-padding-large lf-margin-top lf-large">GET STARTED</a></p>
+            <p><a href="#indexSub"class="buttonHover"><span>GET STARTED</span></a></p>
+
+            <!-- <p><a href="#indexSub" class="lf-button lf-button-brand  lf-padding-large lf-margin-top lf-large" class="buttonHover"><span>GET STARTED</span></a></p> -->
         </div>
     </div>
 
@@ -81,7 +83,7 @@
     </div>
     <div id='footer'></div>
 
-   <script type="text/javascript" src="./js/findNeighbor.js"></script>
+   <script type="text/javascript" src="./js/findNeighbor.js></script>
 </body>
 
 </html>
