--- a/html/team.html
+++ b/html/team.html
@@ -29,9 +29,9 @@
             </figcaption>
         </figure>
         <figure class="snip0016">
-        <img src="../image/siri.jpeg" alt="amanda"/>
+        <img src="../image/amanda.jpg" alt="amanda"/>
            <figcaption>
-             <h2>Amanda</h2>
+             <h2>Ching-Chi</h2>
              <p>Web Designer</p>
            </figcaption>
        </figure>
