--- a/html/neighborDetail.html
+++ b/html/neighborDetail.html
@@ -30,14 +30,14 @@
     <div id='header'></div>
     <div class="neighborName"><span></span></div>
     <div class="row">
-      <div id="rowNav">
+      <!-- <div id="rowNav">
         <a href="#galleryDesc"><i class="fa fa-circle"></i></a>
         <a href="#historyDesc"><i class="fa fa-circle"></i></a>
         <a href="#schoolDesc"><i class="fa fa-circle"></i></a>
         <a href="#incomeDesc"><i class="fa fa-circle"></i></a>
         <a href="#housePriceDesc"><i class="fa fa-circle"></i></a>
         <a href="#activityDesc"><i class="fa fa-circle"></i></a>
-      </div>
+      </div> -->
 
         <div class="col-3 menu">
           <ul>
