--- a/html/SuggestionsPage.html
+++ b/html/SuggestionsPage.html
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="../js/neighborDetail.js"></script>
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
 
    
     <!-- Header Footer Load Script -->
@@ -32,11 +33,14 @@
 <body>
     <!--start add by neha-->
     <div id='header'></div>
-   
+    
     <div class="colLayout">
         <div id="suggestionMain" class="lf-margin-top-xl">
 
             <div id="suggestionNames" class="lf-margin-top-xxl lf-bg text-center">
+            <div id = "pdf">
+                <a id = "sapdf" href=""><i class="fa fa-file-pdf-o" aria-hidden="true"></i> save as pdf</a>
+            </div>
                 <div class="lf-padding-large"><h2 class="lf-xlarge">BEST NEIGHBORHOODS FOR YOU</h2></div>
                 <div style="vertical-align: middle;display: inline-block">
                     <ul class="text-center desktopLayout" style="list-style-type: none">
@@ -48,18 +52,21 @@
             </div>
 
             <div class="lf-bg text-center lf-large lf-padding-xlarge">
-                <span>We have ranked the neighborhoods in Seattle based on your on your likes and have recommended you the top three neighborhoods in Seattle for you.
-                    Take a look at the neigborhoods that are top rankers and click on the names to explore more about the neighborhoods or see the
+                <span>We have ranked the neighborhoods in Seattle based on your likes and have recommended you the top three neighborhoods in Seattle for you.
+                    Take a look at the neigborhoods that are top rankers. You can click on their names to explore more about them or you can see the
                     <a id='graphDisplay' href="#graphs" class="lf-link">Graphical Representation</a> to compare these
                     neighborhoods with each other.</span>
                 <div class="text-center">
                     <br/>
-                    <span><a href="/html/map.html" class="lf-button lf-button-brand">EXPLORE MORE</a></span>
+                    <span><a href="../html/map.html" class="lf-button lf-button-brand">EXPLORE MORE</a></span>
                     <span><a  class="lf-like lf-button lf-button-brand">I LIKE ONE </a></span>
 
                 </div>
+               <!-- <div id = "pdf">
+                <a id = "sapdf" href=""><i class="fa fa-file-pdf-o" aria-hidden="true"></i> save as pdf</a>
+                </div> -->
             </div>
-
+            
             <div id='graphs' class="lf-bg1">
                 <div class="lf-padding-large"><h2 class="lf-xlarge ">GRAPHICAL REPRESENTATION FOR TOP 3 NEIGHBORHOODS</h2></div>
                 <div class="card-container mobileLayout desktopLayout"><!--id='suggestedArea' -->
@@ -129,6 +136,7 @@
     <script type="text/javascript" src="../js/suggestRefer.js"></script>
     <script type="text/javascript" src="../js/criterion.js"></script>
     <script type="text/javascript" src="../js/suggestions.js"></script>
+    <script type="text/javascript" src="../js/pdfSuggestionPage.js"></script>
 
     <!-- end by sirisha -->
 </body>
