edited neighborhood name

--- a/html/CompareNeighborhoods.html
+++ b/html/CompareNeighborhoods.html
@@ -56,7 +56,7 @@
               <option value="Fremont">
               <option value="Downtown">
               <option value="Capitol Hill">
-              <option value="NorthGate">
+              <option value="Northgate">
               <option value="Alki">
           </datalist>
     </section>
