Compare page back button

--- a/html/CompareNeighborhoods.html
+++ b/html/CompareNeighborhoods.html
@@ -24,6 +24,11 @@
       <script type="text/javascript" src="../js/loadHeaderFooter.js"></script>
       <script type="text/javascript" src="../js/criterion.js"></script>
   </head>
+  <!-- <script>
+         function goBack() {
+         window.history.back();
+         }
+  </script> -->
   <body>
   <div id='header'></div>
   <div class="heading">
@@ -62,7 +67,8 @@
     </section>
   </div>
   <div class="compareButton">
-    <button class="lf-button lf-button-brand  lf-padding-large lf-margin-top lf-large" onclick="setValues()">Compare</button>
+    <button class="lf-button lf-button-brand  lf-padding-large lf-margin-top lf-large buttonStyling"  onclick="setValues()">Compare</button>
+    <button class="lf-button lf-button-brand  lf-padding-large lf-margin-top lf-large buttonStyling"  onclick="goBack()">Back</button>
   </div>
   <div class="compareDetails">
       <h1>How do we Compare ?</h1>
