--- a/html/finalPage.html
+++ b/html/finalPage.html
@@ -33,7 +33,7 @@
 		<p> We are very happy to help you choose your desired neighborhood.</p>
 		<p>Here is our <a href="team.html">team</a> who helped you throughout this process</p>
 	</div>
-	<div id='footer'></div>
+	<!-- <div id='footer'></div> -->
 	<script src="../js/finalPage.js" type="text/javascript"></script>
 </body>
 
