--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="description" content="Find Your Dream Neighborhood">
+    <meta name="keywords" content="local,neighborhood,seattle">
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>Locale Finder</title>
 
@@ -13,12 +15,11 @@
 
     <link rel="stylesheet" type="text/css" href="./css/index.css" />
     <link rel="shortcut icon" href="favicon.ico">
-	<link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
+	  <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/findNeighbor.css" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" />
 
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Muli&effect=shadow-multiple|3d-float" />
-    <!-- <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" /> -->
     <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -29,61 +30,50 @@
 
 <body>
 
-    <div id='header'></div>
-
-
-    <div id="indexMain" class='bg-main  display-main'>
+    <header id='header'></header>
+    <main id="indexMain" class='bg-main  display-main'>
         <div class="position-left lf-text-color text-lighter lf-transform" style="padding: 38px ;padding-top:0px">
             <span class="text-xxxlarge">Find Your Dream Neighborhood</span>
             <br/>
             <span class="text-large">We care what matters to you</span>
             <p><a href="#indexSub"class="buttonHover"><span>GET STARTED</span></a></p>
-
             <!-- <p><a href="#indexSub" class="lf-button lf-button-brand  lf-padding-large lf-margin-top lf-large" class="buttonHover"><span>GET STARTED</span></a></p> -->
         </div>
-    </div>
+    </main>
 
-    <div id="indexSub" class="lf-bg">
+    <article id="indexSub" class="lf-bg">
        <!-- <div id="indexSub" class="text-large text-center" style="font-size:28px"> <h1 class="lf-padding-large"> OUR OPTIONS  </h1>
         </div> -->
         <div  class="card-container desktopLayout">
-
-            <div class="lf-card-2">
-                <img src="./image/seattle.jpg" alt="Get Suggestion for a neighborhood"/>
+            <section class="lf-card-2">
+                <figure><img src="./image/seattle.jpg" alt="Get Suggestion for a neighborhood"/></figure>
                 <div class="lf-card-block">
                     <h4 class="lf-card-title">New to Seattle!</h4><br/>
                     <p class="lf-card-text">Welcome to the Evergreen State. We would love to suggest top 3 areas which are best fit for you and help you find your dream neighborhood. </p><br/>
                     <div><a href="/html/sliderQuestions.html" class="lf-button lf-button-brand ">START</a></div>
                 </div>
-            </div>
+            </section>
 
-            <div class="lf-card-2">
-                <img src="./image/downtown.jpg" alt="Find more about a neighborhood"/>
+            <section class="lf-card-2">
+                <figure><img src="./image/downtown.jpg" alt="Find more about a neighborhood"/></figure>
                 <div class="lf-card-block">
                     <h4 class="lf-card-title">Already know the neighborhood you like?</h4><br/>
                     <p class="lf-card-text">That's awesome! Let us help you explore more on your choice of the neighborhood and provide you more information.</p><br/>
                     <div><a href="/html/map.html" class="lf-button lf-button-brand ">START</a></div>
                 </div>
-            </div>
+            </section>
 
-            <div class="lf-card-2">
-                <img src="./image/southLake.jpg" alt="Compare two neighborhoods"/>
+            <section class="lf-card-2">
+                <figure><img src="./image/southLake.jpg" alt="Compare two neighborhoods"/></figure>
                 <div class="lf-card-block">
                     <h4 class="lf-card-title">Would like to compare neighborhoods?</h4><br/>
                     <p class="lf-card-text">Confused which one to choose. Compare with respect to each criteria and make the right choice.</p><br/>
                     <div><a href="/html/CompareNeighborhoods.html" class="lf-button lf-button-brand ">START</a></div>
                 </div>
-            </div>
+            </section>
         </div>
-
-
-
-
-    <div id='search'></div>
-    </div>
-    <div id='footer'></div>
-
-   <script type="text/javascript" src="./js/findNeighbor.js></script>
+    </article>
+    <footer id='footer'></footer>
+    <script type="text/javascript" src="./js/findNeighbor.js></script>
 </body>
-
 </html>
