--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <link rel="stylesheet" type="text/css" href="./css/brand.css" />
 
     <link rel="stylesheet" type="text/css" href="./css/index.css" />
+    <link rel="stylesheet" type="text/css" href="./css/slide.css" />
     <link rel="shortcut icon" href="favicon.ico">
 	  <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./css/findNeighbor.css" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" />
 
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Muli&effect=shadow-multiple|3d-float" />
@@ -25,20 +25,18 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="./js/loadHeaderFooter.js"></script>
-    <script>document.documentElement.className = 'js';</script>
+    <script type="text/javascript" src="./js/slide.js"></script>
 </head>
 
 <body>
 
     <header id='header'></header>
-    <main id="indexMain" class='bg-main  display-main'>
-        <div class="position-left lf-text-color text-lighter lf-transform" style="padding: 38px ;padding-top:0px">
-            <span class="text-xxxlarge">Find Your Dream Neighborhood</span>
-            <br/>
-            <span class="text-large">We care what matters to you</span>
-            <p><a href="#indexSub"class="buttonHover"><span>GET STARTED</span></a></p>
-            <!-- <p><a href="#indexSub" class="lf-button lf-button-brand  lf-padding-large lf-margin-top lf-large" class="buttonHover"><span>GET STARTED</span></a></p> -->
-        </div>
+    <main id="indexMain" class='bg-main display-main'>
+      		<div class="icon" id="left"><i class="fa fa-angle-left"></i></div>
+          <h2 id="sliderHeader">Find Your Dream Neighborhood</h2>
+          <p id="sliderPara">We care what matters to you</p>
+          <p id="moreBtn"><a href="#indexSub" class="buttonHover"><span>GET STARTED</span></a></p>
+      		<div class="icon" id="right"><i class="fa fa-angle-right"></i></div>
     </main>
 
     <article id="indexSub" class="lf-bg">
@@ -74,6 +72,5 @@
         </div>
     </article>
     <footer id='footer'></footer>
-    <script type="text/javascript" src="./js/findNeighbor.js></script>
 </body>
 </html>
