--- a/html/header.html
+++ b/html/header.html
@@ -1,10 +1,9 @@
-
 <header class="sticky-top">
     <nav id="nav" class="rowLayout lf-card"  style="justify-content: space-between">
-        <div class="rowLayout">
-            <div><span class="text-xxxlarge lf-button">LF</span></div>
+        <div class="rowLayout" style="align-items: center">
+            <div><a href="/index.html" class="text-xxxlarge lf-button">LF</a></div>
             <div>
-                <a href="/index.html" class="lf-button header-link wide lf-margin-top">LOCALE FINDER</a>
+                <p class="wide">LOCALE FINDER</p>
             </div>
         </div>
 
