--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="icon" id="left"><i class="fa fa-angle-left"></i></div>
         <h2 id="sliderHeader">Find Your Dream Neighborhood</h2>
         <p id="sliderPara">We care what matters to you</p>
-        <p id="moreBtn"><a href="#indexSub" class="buttonHover"><span>GET STARTED</span></a></p>
+        <p id="moreBtn"><a href="#indexSub" class="buttonHover"><span>LEARN MORE</span></a></p>
         <div class="icon" id="right"><i class="fa fa-angle-right"></i></div>
     </main>
     <article id="indexSub" class="lf-bg">       
