--- a/html/header.html
+++ b/html/header.html
@@ -3,7 +3,7 @@
         <div class="rowLayout" style="align-items: center">
             <div><a href="/index.html" class="text-xxxlarge lf-button">LF</a></div>
             <div>
-                <p class="wide">LOCALE FINDER</p>
+                <h1 class="wide">LOCALE FINDER</h1>
             </div>
         </div>
 
